testing demo build

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -12,9 +12,7 @@
           <div class="hero-copy">
             <h2>⌂</h2>
             <p class="hero-callout">
-              <a href="itms-services://?action=download-manifest&url=https://east.glgresearch.com/myface/Go.plist">
-                Make a connection
-              </a>
+               Make a connection
             </p>
           </div>
           <div class="hero-product"><img src="images/marketing/CM_List_450.png"></div>
@@ -25,8 +23,10 @@
             </a>
               </div>
               <div class="hero-btn-copy">
-                <h4>Download</h4>
-                <p>in the App Store</p>
+                <a href="itms-services://?action=download-manifest&url=https://services.glgresearch.com/go-marketing/Go.plist">
+                  <h4>Download</h4>
+                  <p>in the App Store</p>
+                </a>
               </div>
           </div>
           <div class="ribbon">
