link button download button

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -104,13 +104,15 @@
           </div>
           <div class="action-container">
             <div class="fapp-btn">
-              <div class="icon-container">
-                <span class="phone-icon" aria-hidden="true" data-icon="L"></span>
-              </div>
-              <div class="hero-btn-copy">
-                <h4>Download</h4>
-                <p>in the App Store</p>
-              </div>
+              <a href="itms-services://?action=download-manifest&url=https://gomobile.glgroup.com.com/Go.plist">
+                <div class="icon-container">
+                  <span class="phone-icon" aria-hidden="true" data-icon="L"></span>
+                </div>
+                <div class="hero-btn-copy">
+                  <h4>Download</h4>
+                  <p>in the App Store</p>
+                </div>
+              </a>
             </div>
           </div>
         </div>
