Updated GO mobile marketing website with new screen shots, copy and typeface tweaks.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -11,11 +11,9 @@
         <div class="hero">
           <div class="hero-copy">
             <h2>⌂</h2>
-            <p class="hero-callout">
-               Make a connection
-            </p>
+            <p class="hero-callout">Where top professionals share expertise</p>
           </div>
-          <div class="hero-product"><img src="images/marketing/CM_List_450.png"></div>
+          <div class="hero-product"><img src="images/marketing/go_menu_list.png"></div>
           <div class="hero-app-btn">
               <div class="icon-container">
             <a href="itms-services://?action=download-manifest&url=https://gomobile.glgroup.com.com/Go.plist">
@@ -25,12 +23,12 @@
               <div class="hero-btn-copy">
                 <a href="itms-services://?action=download-manifest&url=https://services.glgresearch.com/go-marketing/Go.plist">
                   <h4>Download</h4>
-                  <p>in the App Store</p>
+                  <p>GLG/GO Mobile</p>
                 </a>
               </div>
           </div>
           <div class="ribbon">
-            <p class="r-title">Introducing <span class="r-logo">⌂</span> <span class="slant">/</span> GO Mobile</p>
+            <p class="r-title">Introducing <span class="r-logo">⌂</span> <span class="slant">/</span> <span class="go">GO</span> Mobile</p>
           </div>
         </div>
       </div> <!-- end of marketing-container -->
@@ -39,12 +37,12 @@
         <div class="row1-container">
 
           <div class="row1-copy">
-            <h2 class="r1-title">A curated list of experts you can trust.</h2>
+            <h2 class="r1-title">Expertise you can trust.</h2>
             <p class="r1-copy">The GO App delivers a curated list of experts that you can trust to acclerate knowledge exchange through one-on-one conversation.  Get timely referrels within a few hours from GLGs expansive network of 375,000 leading professionals from your pocket.</p>
           </div>
 
           <div class="row1-img">
-            <img src="images/marketing/member_list_trim.png">
+            <img src="images/marketing/go_mobile_list.png">
           </div>
 
         </div>
@@ -73,10 +71,10 @@
             <p class="r3-copy">Council Members consult with you over the phone or in person, through small group meetings or longer-term board or special advisory positions.</p>
           </div>
           <div class="row3-img">
-            <img src="images/marketing/council_member_details.png">
+            <img src="images/marketing/go_mobile_details.png">
           </div>
           <div class="row3-img-mobile">
-            <img src="images/marketing/council_member_details_400.png">
+            <img src="images/marketing/go_mobile_details_400.png">
           </div>
         </div>
       </div> <!-- end of row3 -->
@@ -88,8 +86,8 @@
           </div>
           <div class="row4-copy">
             <h2 class="r4-title">Live support from your engagement manager.</h2>
-            <p class="r4-copy">A click away from getting live customer support, advice and recommendations.</p>
-            <p class="r4-copy">Council Members consult with you over the phone or in person, through small group meetings or longer-term board or special advisory positions.</p>
+            <p class="r4-copy">A click away from getting live customer support, advice and recommendations. Council Members consult with you over the phone or in person, through small group meetings or longer-term board or special advisory positions.</p>
+            <p class="r4-copy"></p>
           </div>
           <div class="row4-img-mobile">
             <img src="images/marketing/contact_dialog_solo.png">
@@ -110,7 +108,7 @@
                 </div>
                 <div class="hero-btn-copy">
                   <h4>Download</h4>
-                  <p>in the App Store</p>
+                  <p>GLG/GO Mobile</p>
                 </div>
               </a>
             </div>
