Added beta label to marketing website.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Introducing GLG/GO Mobile</title>
+    <title>Introducing GLG/GO Mobile Beta</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
   </head>
   <body>
@@ -21,12 +21,12 @@
               </div>
               <div class="hero-btn-copy">
                   <h4>Download</h4>
-                  <p>GLG/GO Mobile</p>
+                  <p>GO Mobile Beta</p>
               </div>
             </a>
           </div>
           <div class="ribbon">
-            <p class="r-title">Introducing <span class="r-logo">⌂</span> <span class="slant">/</span> <span class="go">GO</span> Mobile</p>
+            <p class="r-title">Introducing <span class="r-logo">⌂</span> <span class="slant">/</span> <span class="go">GO</span> Mobile <span class="beta">Beta</span> </p>
           </div>
         </div>
       </div> <!-- end of marketing-container -->
@@ -36,7 +36,7 @@
 
           <div class="row1-copy">
             <h2 class="r1-title">Expertise you can trust.</h2>
-            <p class="r1-copy">The GO App delivers a curated list of experts that you can trust to acclerate knowledge exchange through one-on-one conversation.  Get timely referrels within a few hours from GLGs expansive network of 375,000 leading professionals from your pocket.</p>
+            <p class="r1-copy">The GO Mobile <span class="c-beta">Beta</span> delivers a curated list of experts that you can trust to acclerate knowledge exchange through one-on-one conversation.  Get timely referrels within a few hours from GLGs expansive network of 375,000 leading professionals from your pocket.</p>
           </div>
 
           <div class="row1-img">
@@ -96,7 +96,7 @@
       <section class="action-msg">
         <div class="action-callout-container">
           <div class="action-callout">
-            <p><span>Explore GO App.</span> Start interacting with experts to gain insight.</p>
+            <p><span>Explore GO Mobile <span class="a-beta">Beta</span>.</span> Start interacting with experts to gain insight.</p>
           </div>
           <div class="action-container">
             <div class="fapp-btn">
@@ -106,7 +106,7 @@
                 </div>
                 <div class="hero-btn-copy">
                   <h4>Download</h4>
-                  <p>GLG/GO Mobile</p>
+                  <p>GO Mobile Beta</p>
                 </div>
               </a>
             </div>
