Added iPhone only label to download buttons.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -20,6 +20,7 @@
                 <span class="phone-icon" aria-hidden="true" data-icon="L"></span>
               </div>
               <div class="hero-btn-copy">
+                  <p class="iphone-only">iPhone Only</p>
                   <h4>Download</h4>
                   <p>GO Mobile Beta</p>
               </div>
@@ -105,6 +106,7 @@
                   <span class="phone-icon" aria-hidden="true" data-icon="L"></span>
                 </div>
                 <div class="hero-btn-copy">
+                  <p class="iphone-only">iPhone Only</p>
                   <h4>Download</h4>
                   <p>GO Mobile Beta</p>
                 </div>
