Fixed mobile download button and update copy located on the request download page.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -21,7 +21,7 @@
               <div class="icon-container">
                 <span class="phone-icon" aria-hidden="true" data-icon="L"></span>
               </div>
-              <div class="hero-btn-copy">
+              <div class="mobile-btn-copy">
                   <p class="iphone-only">iPhone Only</p>
                   <h4>Download</h4>
                   <p>GO Mobile Beta</p>
