--- a/src/site/request.html
+++ b/src/site/request.html
@@ -14,7 +14,7 @@
         <span class="r-logo">⌂</span><span class="slant">/</span><span class="go">GO Mobile</span>
       </div>
       <div class="success-body">
-        <p>Your GLG token is being generated.  An SMS message will be sent if you entered a cell number.  Otherwise an email will be delivered with a download link.</p>
+        <p>Your GLG token is being generated.  A text message will be sent if you entered a cell number.  Otherwise an email will be delivered with a download link.</p>
         <div class="btn home-btn"><a href="index.html">Back Home</a></div>
         <div class="btn token-btn">Request another token</div>
       </div>
@@ -40,7 +40,7 @@
             <input type="email" name="email" placeholder="Email" title="Email">
           </label>
           <label>
-            <input type="phone" name="phone" placeholder="Phone Number" title="Phone Number">
+            <input type="phone" name="phone" placeholder="Cell Number" title="Cell Number">
           </label>
         </form>
         <div class="tofs">
