Update footer navigation links.

--- a/src/site/request.html
+++ b/src/site/request.html
@@ -39,6 +39,7 @@
           <label>
             <input type="email" name="email" placeholder="Email" title="Email">
           </label>
+          <!-- <p>Or</p> -->
           <label>
             <input type="phone" name="phone" placeholder="Cell Number" title="Cell Number">
           </label>
@@ -63,11 +64,10 @@
       <footer class="request-footer">
         <div class="footer-container">
           <ul class="footer-menu">
-            <li><a href="#">Our Mission</a></li>
-            <li><a href="#">Membership</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Newsroom</a></li>
-            <li><a href="#">Complience</a></li>
+            <li><a href="http://glg.it/">Our Mission</a></li>
+            <li><a href="http://glg.it/about/">About Us</a></li>
+            <li><a href="http://glg.it/news/">Newsroom</a></li>
+            <li><a href="http://glg.it/compliance/">Complience</a></li>
           </ul>
           <div class="footer-logo">© ⌂</div>
         </div>
