--- a/src/site/index.html
+++ b/src/site/index.html
@@ -125,11 +125,10 @@
       <footer>
         <div class="footer-container">
           <ul class="footer-menu">
-            <li><a href="#">Our Mission</a></li>
-            <li><a href="#">Membership</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Newsroom</a></li>
-            <li><a href="#">Complience</a></li>
+            <li><a href="http://glg.it/">Our Mission</a></li>
+            <li><a href="http://glg.it/about/">About Us</a></li>
+            <li><a href="http://glg.it/news/">Newsroom</a></li>
+            <li><a href="http://glg.it/compliance/">Complience</a></li>
           </ul>
           <div class="footer-logo">© ⌂</div>
         </div>
