--- a/src/site/index.html
+++ b/src/site/index.html
@@ -130,7 +130,7 @@
             <li><a href="http://glg.it/news/">Newsroom</a></li>
             <li><a href="http://glg.it/compliance/">Complience</a></li>
           </ul>
-          <div class="footer-logo">© ⌂</div>
+          <a href="http://glg.it/"><div class="footer-logo">© ⌂</div></a>
         </div>
       </footer>
     </div> <!-- end of site-container -->
