--- a/src/site/request.html
+++ b/src/site/request.html
@@ -37,17 +37,17 @@
         <p>Request Token and App Download</p>
         <form class="request-input">
           <label>
-            <input type="email" name="email" placeholder="Email" title="Email">
+            <input id="cell" type="phone" name="phone" placeholder="Cell Number" title="Cell Number">
           </label>
-          <!-- <p>Or</p> -->
+          <p>Or</p>
           <label>
-            <input type="phone" name="phone" placeholder="Cell Number" title="Cell Number">
+            <input id="email" type="email" name="email" placeholder="Email" title="Email">
           </label>
         </form>
-        <div class="tofs">
+        <!--<div class="tofs">
           <input type="checkbox" name="vehicle" value="Car">
           <p>Please read and agree to <a href="">terms of service.</a></p>
-        </div>
+        </div>-->
 
         <div class="request-button">
           <a href="#">
