Now using browser-request for download button.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -17,8 +17,8 @@
           </div>
           <div class="hero-product"><img src="images/marketing/go_menu_update.png"></div>
 
-          <div class="hero-app-btn">
-            <a href="download">
+          <div id="mobileDownload" class="hero-app-btn">
+            <a href="">
               <div class="icon-container">
                 <span class="phone-icon" aria-hidden="true" data-icon="L"></span>
               </div>
@@ -136,7 +136,8 @@
       </footer>
     </div> <!-- end of site-container -->
 
-    <script id="error-template" type="text/html">
+    <!-- Start of Micro-Templating -->
+    <script id="errorTemplate" type="text/html">
       <h2><span aria-span="hidden" data-icon="2"></span>Error</h2>
       <p>Please enter a valid email address.</p>
     </script> 
