--- a/src/site/request.html
+++ b/src/site/request.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Request GO Mobile App</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <script type="text/javascript" src="scripts/marketing.js"></script>
+    <script type="text/javascript" src="scripts/request.js"></script>
   </head>
   <body>
     <div class="success-overlay"></div>
@@ -72,12 +72,6 @@
           <div class="footer-logo">© ⌂</div>
         </div>
       </footer>
-      <script type="text/javascript">
-        document.addEventListener("DOMContentLoaded", function(event) {
-          console.log("DOM fully loaded and parsed");
-          marketing.init();
-        });
-      </script>
     </div>
   </body>
 </html>
