Hooked up request.js to request.html for JS functionality.

--- a/src/site/request.html
+++ b/src/site/request.html
@@ -73,5 +73,11 @@
         </div>
       </footer>
     </div>
+    <script type="text/javascript">
+      document.addEventListener("DOMContentLoaded", function(event) {
+        console.log("DOM fully loaded and parsed");
+        request.init();
+      });
+    </script>
   </body>
 </html>
