--- a/src/site/index.html
+++ b/src/site/index.html
@@ -138,8 +138,8 @@
 
     <!-- Start of Micro-Templating -->
     <script id="errorTemplate" type="text/html">
-      <h2><span aria-span="hidden" data-icon="2"></span>Error</h2>
-      <p>Please enter a valid email address.</p>
+      <h2><span aria-span="hidden" data-icon="2"></span><%= title %></h2>
+      <p><%= message %></p>
     </script> 
 
   </body>
