--- a/src/site/index.html
+++ b/src/site/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Introducing GLG/GO Mobile Beta</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <script type="text/javascript" src="scripts/marketing.js"></script>
+    <!--<script type="text/javascript" src="scripts/marketing.js"></script>-->
   </head>
   <body>
     <div class="site-container">
@@ -18,7 +18,7 @@
           <div class="hero-product"><img src="images/marketing/go_menu_update.png"></div>
 
           <div id="mobileDownload" class="hero-app-btn">
-            <a href="">
+            <a href="download">
               <div class="icon-container">
                 <span class="phone-icon" aria-hidden="true" data-icon="L"></span>
               </div>
