Download button located in footer now using download endpoint.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -108,8 +108,8 @@
             <p><span>Explore GO Mobile <span class="a-beta">Beta</span>.</span> Start interacting with experts to gain insight.</p>
           </div>
           <div class="action-container">
-            <div class="fapp-btn">
-              <a href="itms-services://?action=download-manifest&url=https://services.glgresearch.com/go-marketing/Go.plist">
+            <div id="footerDownloadBtn" class="fapp-btn">
+              <a href="">
                 <div class="icon-container">
                   <span class="phone-icon" aria-hidden="true" data-icon="L"></span>
                 </div>
