WIP:Added email and cell number validation.

--- a/src/site/request.html
+++ b/src/site/request.html
@@ -21,7 +21,7 @@
     </div>
     <div class="request-container">
 
-      <div class="notification-dialog"></div>
+      <div class="error-dialog"></div>
 
       <div class="center-request">
         <div class="logo">
