WIP: Updated POST for download.

--- a/src/site/request.html
+++ b/src/site/request.html
@@ -32,14 +32,14 @@
           </a>
         </div>
         <p>Request Token and App Download</p>
-        <form method="POST" action="sms-test" class="request-input">
+        <form method="POST" action="sms-me" class="request-input">
           <label>
             <input id="cell" type="text" name="phone" placeholder="Cell Number" title="Cell Number">
           </label>
-          <p>Or</p>
+          <!--<p>Or</p>
           <label>
             <input id="email" type="text" name="email" placeholder="Email" title="Email">
-          </label>
+          </label>-->
           <!--<div class="tofs">
             <input type="checkbox" name="vehicle" value="Car">
             <p>Please read and agree to <a href="">terms of service.</a></p>
