Updated server.js POST to use browser-request instead of form submission for sms-me POST.

--- a/src/site/request.html
+++ b/src/site/request.html
@@ -32,7 +32,7 @@
           </a>
         </div>
         <p>Request Token and App Download</p>
-        <form method="POST" action="sms-me" class="request-input">
+        <form class="request-input">
           <label>
             <input id="cell" type="text" name="phone" placeholder="Cell Number" title="Cell Number">
           </label>
