Updated GO Mobile copy for app download.

--- a/src/site/request.html
+++ b/src/site/request.html
@@ -14,7 +14,7 @@
         <span class="r-logo">⌂</span><span class="slant">/</span><span class="go">GO Mobile</span>
       </div>
       <div class="success-body">
-        <p>Your GLG token is being generated.  A text message will be sent if you entered a cell number.  Otherwise an email will be delivered with a download link.</p>
+        <p>A text message will be sent to your cell phone number.  Just click on the link in your text message and GO Mobile will download to your iPhone.</p>
         <div class="btn home-btn"><a href="index.html">Back Home</a></div>
         <div class="btn token-btn">Request another token</div>
       </div>
@@ -31,7 +31,7 @@
             <span class="go">GO Mobile</span>
           </a>
         </div>
-        <p>Request Token and App Download</p>
+        <p>Enter your cell phone number. A text message with a link for the GO Mobile App will be sent to you. Only for the iPhone.</p>
         <form class="request-input">
           <label>
             <input id="cell" type="text" name="phone" placeholder="Cell Number" title="Cell Number">
