Updated success modal dialog button copy from request another token to Enter another phone number

--- a/src/site/request.html
+++ b/src/site/request.html
@@ -16,7 +16,7 @@
       <div class="success-body">
         <p>A text message will be sent to your cell phone number.  Just click on the link in your text message and GO Mobile will download to your iPhone.</p>
         <div class="btn home-btn"><a href="index.html">Back Home</a></div>
-        <div class="btn token-btn">Request another token</div>
+        <div class="btn token-btn">Enter another phone number</div>
       </div>
     </div>
     <div class="request-container">
