Fixed anchor tag for request app download button.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -30,9 +30,7 @@
             </a>
           </div>
 
-          <div class="req-btn">
-            <a href="request.html"><span aria-hidden="true" data-icon="K"></span><p>Request Download</p></a>
-          </div>
+          <a href="request.html"><div class="req-btn"><span aria-hidden="true" data-icon="K"></span><p>Request Download</p></div></a>
 
           <div class="ribbon">
             <p class="r-title">Introducing <span class="r-logo">⌂</span> <span class="slant">/</span> <span class="go">GO</span> Mobile <span class="beta">Beta</span> </p>
