Updated marketing screen shots to not display rates.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -76,10 +76,10 @@
             <p class="r3-copy">Council Members consult with you over the phone or in person, through small group meetings or longer-term board or special advisory positions.</p>
           </div>
           <div class="row3-img">
-            <img src="images/marketing/go_mobile_details_update.png">
+            <img src="images/marketing/go_mobile_details_update.jpg">
           </div>
           <div class="row3-img-mobile">
-            <img src="images/marketing/go_mobile_details_update_mobile.png">
+            <img src="images/marketing/go_mobile_details_update_mobile.jpg">
           </div>
         </div>
       </div> <!-- end of row3 -->
