--- a/src/site/test.html
+++ b/src/site/test.html
@@ -2,6 +2,6 @@
 <head>
 </head>
 <body>
-  <a href="glggo://">Test Launch</a>
+  <a href="glggo://bd1bff6e6ca803ffc20ae5c29f4005d9dfe1d504968a479e9e7eab2007bb528d">Test Launch</a>
 </body>
 </html>
